--- a/index.css
+++ b/index.css
@@ -180,7 +180,7 @@ h3{
 }
 
 h2{
- color:#5DD39E;
+ color:#ABD278;
 }
 
 form{
@@ -325,7 +325,7 @@ tr.nonMessageRow {
  height:5%;
 }
 #mainPageSectionTwoHeaderMobile{
- color:#5DD39E;
+ color:#ABD278;
 }
 tr.messageRow{
  height: 100%;
