--- a/index.css
+++ b/index.css
@@ -583,6 +583,8 @@ td.imageColumnMobile{
  
  #mainPageSectionTwoHeaderMobile{
   display: initial;
+  padding-right: 2%;
+  padding-left: 2%;
  }
 
  
