--- a/index.css
+++ b/index.css
@@ -153,7 +153,7 @@ a:hover{
 }
 
 img#myMainPagePic{
- width: 50%;
+ width: 45%;
 }
 
 img.section3Icon{
@@ -296,8 +296,10 @@ td.section3TableColumn{
 } 
 
 #section2Bio, #section2BioMobile{
- margin: 1em;
- line-height: 2em;
+ margin-top: 1em;
+ margin-left: 1em;
+ margin-right: 1em;
+ line-height: 1.75em;
 }
 
 table{
