--- a/index.css
+++ b/index.css
@@ -132,7 +132,7 @@ a:hover{
 }
 
 #frontPageNameH2{
- font-size: large;
+ font-size: x-large;
 }
 
 #frontPageName{
@@ -296,10 +296,10 @@ td.section3TableColumn{
 } 
 
 #section2Bio, #section2BioMobile{
- margin-top: 1em;
+ margin-top: 0.75em;
  margin-left: 1em;
  margin-right: 1em;
- line-height: 1.75em;
+ line-height: 1.5em;
 }
 
 table{
