--- a/index.css
+++ b/index.css
@@ -369,7 +369,7 @@ ul.section3ListMobile{
  #page2PicDiv{
       margin-top: 5px;
   overflow:hidden;
-  max-height:270px;
+  max-height:290px;
  }
 
 .section3TableMobile, #mainPageSectionTwoHeaderMobile, #section2BioMobile, .h4Landscape{
@@ -530,7 +530,7 @@ td.section3TableColumn{
     margin-bottom:0;
  }
  
-.section3Table, #footFYI, #fp-nav{
+.section3Table, #footFYI{
   display:none;
 
 }
