--- a/index.css
+++ b/index.css
@@ -7,9 +7,9 @@ html, body{
 font-family: 'Lato', sans-serif;
 }
 
-#fp-nav li{
+#fp-nav span{
  background-color: #ABD278;
- opacity: 0.5;
+ opacity: 0.75;
 }
 
 
