--- a/css/newstuff.css
+++ b/css/newstuff.css
@@ -276,3 +276,13 @@ h1#successfulMessage{
 .portfolio-container{
     text-align:center;
 }
+
+
+@media only screen and (max-width: 600px) and (orientation: portrait) {
+
+
+    #section2Bio {
+        font-size: xx-large;
+    }
+
+}
