--- a/css/style.css
+++ b/css/style.css
@@ -358,14 +358,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .carousel, #hero .carousel-inner, #hero .carousel-item, #hero .carousel-item::before {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
 }
 
 #hero .carousel-container {
@@ -373,10 +375,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: flex-end;
   justify-content: center;
   position: absolute;
-  bottom: 60px;
-  top: 70px;
-  left: 55px;
-  right: 55px;
+  top: 40%;
 }
 
 #hero .carousel-content {
