--- a/css/newstuff.css
+++ b/css/newstuff.css
@@ -282,7 +282,7 @@ h1#successfulMessage{
 @media only screen and (max-width: 900px) {
 
 
-    #section2Bio {
+    #section2BioDiv {
         font-size: xx-large;
     }
 
