--- a/css/newstuff.css
+++ b/css/newstuff.css
@@ -279,11 +279,10 @@ h1#successfulMessage{
 }
 
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 900px) and (orientation: portrait) {
 
 
     #section2BioDiv {
         font-size: xx-large;
     }
-
 }
