--- a/css/newstuff.css
+++ b/css/newstuff.css
@@ -1,13 +1,13 @@
 #slide1 {
-    background-image: url('/images/roadRain3.jpg');
+    background-image: url('/images/s11.jpg');
 }
 
 #slide2 {
-    background-image: url('/images/01.jpg');
+    background-image: url('/images/s2.jpg');
 }
 
 #slide3 {
-    background-image: url('/images/fall2.jpg');
+    background-image: url('/images/s7.jpg');
 }
 
 .slideH2 {
