--- a/css/newstuff.css
+++ b/css/newstuff.css
@@ -36,8 +36,19 @@ p {
     padding-top:15%;
 }
 
+#techPortalPic1{
+    width:80%;
+    padding: 10%;
+    padding-top: 0;
+}
+
+.samplePicDiv{
+    text-align:center;
+}
+
 #sampleWordDiv {
     padding: 5%;
+    padding-top:0;
 }
 
 @keyframes caretBlink {
